fix some more errors, definitely not done though